--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
+  "name": "portfolio",
+  "version": "1.0.0",
+  "main": "animation.js",
+  "scripts": {
+    "start": "vercel dev"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "gsap": "^3.12.5"
   },
-  "scripts": {
-    "start": "node server.js"
-  },
-  "name": "portfolio",
-  "version": "1.0.0",
-  "main": "animation.js",
   "devDependencies": {},
   "keywords": [],
   "author": "",
